--- a/index.html
+++ b/index.html
@@ -239,11 +239,11 @@
         </section>
 
         <section id="about">
-            <img src="photo.jpg" alt="Photo de profil de NODJIADOUM Olivier Mahamat">
+            <img src="images.jpg" alt="Photo de profil de NODJIADOUM Olivier Mahamat">
             <div class="text">
                 <h2>À propos</h2>
                 <p>Je m'appelle NODJIADOUM Olivier Mahamat, passionné par la création de sites web modernes et interactifs. Je suis actuellement étudiant en développement web, et je cherche à améliorer mes compétences en JavaScript, HTML et CSS. J'adore transformer mes idées en projets concrets en explorant les nouvelles technologies.</p>
-                <a href="CV_OlivierMahamat.pdf" download>
+                <a href="CVOli.pdf" download>
                     <button>Télécharger mon CV</button>
                 </a>
             </div>
@@ -310,3 +310,4 @@
     </footer>
 </body>
 </html>
+
